# backend/src/routes/userRoutes.ts
@@ -1,27 +1,46 @@
 import { Router } from 'express';
+import { authenticateToken } from '../middleware/authenticateToken';
 import {
-  loginUser,
-  registerUser,
   getUsers,
   getUserById,
   createUser,
   updateUser,
   deleteUser,
+  registerUser,
+  loginUser,
+  updateDirectorStatus,
 } from '../controllers/userController';
 
 const router = Router();
 
-// Route pour la connexion
-router.post('/login', loginUser);
+// Routes publiques
+router.post('/register', registerUser); // Inscription d'un utilisateur
+router.post('/login', loginUser);       // Connexion d'un utilisateur
 
-// Route pour l'inscription
-router.post('/register', registerUser);
+// Route de test avec authentification
+router.get('/test', authenticateToken, (req: any, res) => {
+  if (req.user) {
+    res.json({
+      message: 'Route test accessible',
+      user: req.user, // Retourne l'utilisateur authentifié
+    });
+  } else {
+    res.status(403).json({ error: 'Utilisateur non authentifié' });
+  }
+});
 
-// Autres routes CRUD
-router.get('/', getUsers);
+// Routes dynamiques doivent venir après
 router.get('/:id', getUserById);
-router.post('/', createUser);
-router.put('/:id', updateUser);
-router.delete('/:id', deleteUser);
+
+// Routes sécurisées avec authenticateToken
+router.use(authenticateToken); // Applique le middleware à toutes les routes suivantes
+
+router.get('/', getUsers);                      // Récupérer tous les utilisateurs
+router.get('/:id', getUserById);                // Récupérer un utilisateur par ID
+router.post('/', createUser);                   // Créer un nouvel utilisateur
+router.put('/:id', updateUser);                 // Mettre à jour un utilisateur existant
+router.delete('/:id', deleteUser);              // Supprimer un utilisateur
+router.put('/update-director-status', authenticateToken, updateDirectorStatus);
+
 
 export default router;
